--- a/yes.html
+++ b/yes.html
@@ -9,7 +9,7 @@
             
             
             <button type="button">
-                <large><h1>An invitation</h1>  </large>
+                <large><h1>An Invitation</h1>  </large>
                 <h2>Namaste shrimati Deviji,</h2><br><h4>I have a simple question from you that will you attend the TECH FEST of IIT Kharagpur if yes then I am inviting you to attend the <a href="https://ktj.in/workshop">kshitij</a> of IIT Kharagpur.There are various workshop on <br><ol>
               <li>AI Assisted IOT Application with Inaquacte Lables Learning  by TCS</li>      
               <li>Integrated power Electronics Components in an EV by Baja</li>
